fix: move model collapse style to scss

--- a/src/style/_models.scss
+++ b/src/style/_models.scss
@@ -118,6 +118,11 @@ section.models
     border: 1px solid rgba($section-models-border-color, .3);
     border-radius: 4px;
 
+    .pointer
+    {
+        cursor: pointer;
+    }
+
     &.is-open
     {
         padding: 0 0 20px;
